Fix broken test